# gower-metric

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  TODO.md  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  run_colab_bencharks.ipynb  tox.toml
.github/: CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md
.github/docs/: examples.md
.github/workflows/: python-test.yml
benchmarks/benchmark_results/: classification_results.xlsx
benchmarks/scripts/: classification.py  clustering.py  memory_usage.py  parallelization.py
comparison/: README.md
comparison/data/: nan_values_custom.csv  weights_custom.csv
comparison/scripts/: plot_results.ipynb
comparison/scripts/cran/: cran_gower.R  cran_gower_python.ipynb  cran_gower_python.py  speed_cran_gower.R  speed_cran_gower_python.ipynb  speed_cran_gower_python.py
comparison/scripts/cran/cran_results/: cran_python_results.txt  speed_cran_gower.txt  speed_cran_gower_python.txt
comparison/scripts/daisy/: daisy_gower.R  daisy_gower_python.ipynb  daisy_gower_python.py  speed_daisy_gower.R  speed_daisy_gower_python.ipynb  speed_daisy_gower_python.py
comparison/scripts/daisy/daisy_results/: daisy_python_speed.txt  daisy_results.txt  daisy_speed.txt
comparison/scripts/daisy/nan_values/: nan_values_daisy.R  nan_values_python.ipynb  nan_values_python.py
comparison/scripts/daisy/weights/: weights_daisy_gower.R  weights_python.ipynb  weights_python.py
data/files/: adult_reduced.csv  artificially_generated.xlsx
docs/source/: api_reference.rst  compatibility.rst  conf.py  index.rst  installation.rst  metric_description.rst  user_guide.rst
docs/source/modules/: core.rst  distances.rst  utils.rst  weights.rst
docs/source/modules/core/: config.rst  exceptions.rst  metric.rst
docs/source/modules/distances/: binary_asymmetric.rst  binary_symmetric.rst  categorical_nominal.rst  categorical_ordinal.rst  numeric_interval.rst  ratio_scale_intercal.rst  ratio_scale_interval.rst
docs/source/modules/external_api/: python_env.rst  python_metrics.rst  r_env.rst
examples/: README.md
examples/advanced_usage/: categorical_ordinal.ipynb  podani.ipynb  similarity.ipynb  weights.ipynb
examples/basic_usage/: numpy.ipynb  pandas.ipynb  similarity.ipynb  transform.ipynb
examples/matrix/: classic_square.ipynb  custom.ipynb  sparse_square.ipynb
examples/scikit_learn/: scktlrn_hdbscan.ipynb  scktlrn_knn.ipynb  scktlrn_pairwise_distances.ipynb
examples/scipy/: scipy_cophenet.ipynb  scipy_pdist.ipynb
examples/scripts/: knn_try.py  matrix_speedup.py  scipy_cophenet.ipynb  scipy_pdist.ipynb  scktlrn_hdbscan.ipynb  scktlrn_knn.ipynb  scktlrn_pairwise_distances.ipynb  weight.py
gower_metric/: __init__.py
gower_metric/core/: __init__.py  config.py  exceptions.py  metric.py
gower_metric/distances/: __init__.py  binary_asymmetric.py  binary_symmetric.py  categorical_nominal.py  categorical_ordinal.py  numeric_interval.py  ratio_scale_interval.py
gower_metric/utils/: __init__.py  aux.py  auxiliary.py  binary_ut.py  cat_ord_ut.py  categorical_ut.py  knn_bandwidth.py  missing.py  ranges.py  to_array.py  transformation.py  validators.py
gower_metric/utils/kde_types/: __init__.py  silverman.py
gower_metric/utils/matrix/: __init__.py  calculate_matrix.py  convert_matrix.py
gower_metric/utils/transforms/: __init__.py  binary.py  categorical.py
gower_metric/weights/: __init__.py  weights.py
gower_similarity/core/: __init__.py  similarity.py
gower_similarity/distances/: binary_asymmetric.py  binary_symmetric.py  categorical_nominal.py  categorical_ordinal.py  numeric_interval.py  ratio_scale_interval.py
gower_similarity/utils/: cat_ord_ut.py  knn_bandwidth.py  missing.py  ranges.py  to_array.py  validators.py
gower_similarity/utils/kde_types/: silverman.py
gower_similarity/weights/: weights.py
src/: GowerMetric.py  weights.py
src/less_relevant/: MixedVariablesMeasures.py  metrics_comparison.py
tests/: UnitTestsGowerMetric.py  conftest.py  test_binary_symmetric.py  test_categorical_nominal.py  test_compute_bandwidth.py  test_conditional_distances.py  test_metrics.py  test_missing.py  test_ratio_scale.py
tests/R_comparison/: test_R_daisy.py  test_R_gower.py
tests/gower_api/: test_binary_asymmetric.py  test_binary_asymmetric_value_order.py  test_binary_symmetric.py  test_binary_symmetric_value_order.py  test_categorical_nominal.py  test_categorical_ordinal.py  test_compute_bandwidth.py  test_conditional_distances.py  test_config_validators.py  test_constructor.py  test_constructor_metadata.py  test_distance_edge_cases.py  test_handle_unseen_binary.py  test_handle_unseen_binary_symmetric.py  test_handle_unseen_categorical_nominal.py  test_handle_unseen_categorical_ordinal.py  test_input_transformer.py  test_matrix.py  test_matrix_coverage.py  test_metric_edge_cases.py  test_missing.py  test_missing_strategies.py  test_pairwise_distances.py  test_ratio_scale.py  test_scipy_dist.py  test_utils_coverage.py  test_validate_transformation.py  test_weights.py
tests/gower_api/integration/: test_matrix.py  test_pairwise_distances.py  test_scipy_dist.py
tests/gower_api/precision/: conftest.py  test_binary_asymmetric.py  test_binary_asymmetric_value_order.py  test_binary_symmetric.py  test_binary_symmetric_value_order.py  test_binary_value_order.py  test_categorical_nominal.py  test_categorical_ordinal.py  test_conditional_distances.py  test_distance_edge_cases.py  test_handle_unseen_binary.py  test_handle_unseen_binary_symmetric.py  test_handle_unseen_categorical.py  test_handle_unseen_categorical_nominal.py  test_handle_unseen_categorical_ordinal.py
tests/gower_api/unit/: test_compute_bandwidth.py  test_config_validators.py  test_constructor_metadata.py  test_matrix_coverage.py  test_metric_edge_cases.py  test_missing.py  test_missing_strategies.py  test_out_of_range.py  test_ratio_scale.py  test_transform_branches.py  test_utils_coverage.py
tests/r_comparison/: conftest.py  test_big_matrix.py  test_r_daisy.py  test_r_gower.py
(+36 files in other folders)
