[project]
authors = [
    {name = "Arch4ngel21", email = "adammichal657@gmail.com"},
]
license-files = ["LICENSE.txt"]
requires-python = ">=3.10, <3.15"
dependencies = [
    "joblib>=1.5.1",
    "numpy<3.0.0,>=2.2.6",
    "pandas<3.0.0,>=2.3.0",
    "scipy>=1.15.3",
]
name = "gower-metric"
version = "1.0.0"
description = "A Python implementation of the Gower distance metric for mixed data types."
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]


[tool.setuptools]
packages = ["gower_metric", "gower_metric.core", "gower_metric.distances", "gower_metric.utils", "gower_metric.utils.kde_types", "gower_metric.utils.matrix", "gower_metric.weights"]
include-package-data = true

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
gower-metric = { workspace = true }

[dependency-groups]
dev = [
    "check-manifest>=0.50",
    "gower-metric",
    "ipykernel>=6.30.1",
    "joblib>=1.5.1",
    "mypy>=1.17.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "twine>=6.2.0",
]

tests = [
    "scipy>=1.15.3",
    "scikit-learn>=1.7.1",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
    "mypy>=1.17.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
]

r_env_tests = [
    "mypy>=1.17.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "rpy2>=3.6.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]

docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

benchmark = [
    "gower-metric",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "openml>=0.15.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project.optional-dependencies]
docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]
