[project]
authors = [
    {name = "Arch4ngel21", email = "adammichal657@gmail.com"},
]
license-files = ["LICENSE.txt"]
requires-python = ">=3.10, <3.15"
dependencies = [
    "joblib>=1.5.1",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "tqdm>=4.67.1",
]
name = "gower-metric"
version = "1.0.0"
description = "A Python implementation of the Gower distance metric for mixed data types."
readme = "README.md"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.setuptools.packages.find]
include = ["gower_metric*"]

[tool.setuptools]
include-package-data = true

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
gower-metric = { workspace = true }

[tool.uv]
override-dependencies = [
    "urllib3>=2.6.3",
    "filelock>=3.20.3",
    "pip>=26.0",
    "setuptools>=78.1.1",
    "fonttools>=4.60.2",
]

[dependency-groups]
dev = [
    "check-manifest>=0.50",
    "gower-metric",
    "ipykernel>=6.30.1",
    "joblib>=1.5.1",
    "matplotlib>=3.10.7",
    "mypy>=1.17.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "pip>=25.2",
    "pre-commit>=4.3.0",
    "pydantic>=2.12.5",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.7.1",
    "tqdm>=4.67.1",
    "twine>=6.2.0",
]

tests = [
    "scipy>=1.15.3",
    "scikit-learn>=1.7.1",
    "pytest>=8.4.1",
    "setuptools>=80.9.0",
    "mypy>=1.17.0",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
    "pydantic>=2.12.5",
]

r_env_tests = [
    "mypy>=1.17.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pydantic>=2.12.5",
    "pytest>=8.4.1",
    "rpy2>=3.6.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
]

docs = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=8.1.3",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-new-tab-link>=0.8.1",
    "sphinx-pydantic>=0.1.1",
    "sphinx-rtd-theme>=3.0.2",
]

benchmark = [
    "gower-metric",
    "joblib>=1.5.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "openml>=0.15.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["gower_metric"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/.*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]